<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="12dp"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textSize="24sp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="12dp"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Title"
        android:text="@string/student_registration_portal" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="4dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:textSize="16sp"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginHorizontal="12dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:textSize="16sp"
            android:hint="@string/email_id" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enrollmentId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:textSize="16sp"
            android:hint="@string/enrollment_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="12dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:padding="10dp"
            android:textSize="16sp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:background="@color/on_hold"
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/clearBtn"
            android:padding="10dp"
            android:textSize="16sp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:background="@color/on_hold"
            android:layout_marginStart="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/studentListViewId"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="12dp"
        tools:listitem="@layout/student_item"
        android:layout_height="0dp" />
</LinearLayout>